AKS/nginx-depl-azure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-cloudlens
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 4
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        - name: tls-secret
          mountPath: /etc/nginx/ssl
          readOnly: true
      volumes:
      - name: html-volume
        configMap:
          name: nginx-html-config
      - name: nginx-config
        configMap:
          name: nginx-config
      - name: tls-secret
        secret:
          secretName: nginx-tls-secret
