AKS/nginx-sidecar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-sidecar
spec:
  selector:
    app: brine-deployment-app
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
