AKS/nginx-reencrypt-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-route
spec:
  host: nginx.apps.emea-sa-openshift.bbn.is.keysight.com
  to:
    kind: Service
    name: nginx-service
  port:
    targetPort: 443
  tls:
    termination: reencrypt
    destinationCACertificate: |
      -----BEGIN CERTIFICATE-----
      MIIDDTCCAfWgAwIBAgIUaTxwzExt401ltv8XrmyOA/yKn9EwDQYJKoZIhvcNAQEL
[...]
      EdTRFfcpo3EATkXFgLK8RF0=
      -----END CERTIFICATE-----
